# vormbaar

./: .gitignore  Cargo.toml  Makefile.toml  README.md  factorial.ron
.github/workflows/: semgrep.yml
bench/: README.md
bench/py/: fac.py
src/: lib.rs  main.rs  ui.rs
