[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.70"
bincode = "1.3.3"
clap = { version = "4.2.4", features = ["derive"] }
content_inspector = "0.2.4"
ron = "0.8.0"
serde = { version = "1.0.160", features = ["derive"] }
serde-querystring = "0.2.1"
stringlit = "2.0.0"
tracing = { version = "0.1.38", optional = true }
tracing-flame = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }

[features]
default = ["flame"]
flame = ["tracing", "tracing-flame", "tracing-subscriber"]
