[package]
name = "vormbaar"
version = "0.1.0"
edition = "2021"

[lib]
name = "vorm"
path = "src/lib.rs"

[[bin]]
name = "vorm"
path = "src/main.rs"

[profile.release]
lto = true

[dependencies]
anyhow = "1.0.71"
bincode = "1.3.3"
clap = { version = "4.2.5", features = ["derive"] }
content_inspector = "0.2.4"
crossterm = "0.25.0"
itertools = "0.10.5"
ron = "0.8.0"
serde = { version = "1.0.160", features = ["derive"] }
serde-querystring = "0.2.1"
stringlit = "2.0.0"
tracing = { version = "0.1.37", optional = true }
tracing-flame = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3.17", optional = true }
tui = { version = "0.19.0", features = ["serde"] }
unicode-width = "0.1.10"
tui-textarea = "0.2.0"
thiserror = "1.0.40"
tracing-chrome = "0.7.1"
tracing-tracy = "0.10.2"

[features]
default = ["flame"]
flame = ["tracing", "tracing-flame", "tracing-subscriber"]
